style.css
/* General */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');


*{
    margin: 0;
    padding: 0;
}

body{
    font-family: "Poppins", "sans-serif";
    background-color: rgb(246,241,227);

}
html{
    scroll-behavior: smooth;
}

p{
    color: rgb(85, 85, 85);
}

/*Transition*/

a,
.btn {
    transition: all 300ms ease;
}

/*Desktop nav*/
nav, .nav-links{
    display: flex;
}

nav{
    justify-content: space-around;
    align-items: center;
    height: 17vh;
}

.nav-links{
    gap: 2rem;
    list-style: none;
    font-size: 1.5rem;
    display: flex;
    align-items: center;

}

a{
    color: rgb(17, 57, 0);
    text-decoration: none;
    text-decoration-color:white ;
}
a:hover{
    color:#fcbd59;
    text-decoration: underline;
    text-underline-offset: 1rem;
    text-decoration-color: #fcbd59;
}
.logo{
    font-size: 2.5rem;
    font-weight: 1000;
}
.logo:hover{
    cursor: default;
}
.nav1{
    border: none;
    outline: none;
    padding: 16px;
    border-radius: 32px;
    background-color: rgb(17, 57, 0);
    text-decoration: none;
    font-weight: 800;
    font-size: 16px;
    color: #fcbd59;
    transition: 300ms;
}
.nav1:hover{
    color: rgb(17, 57, 0);
    background-color: #fcbd59;
    transform: translateY(-5px);
}
/* hamburger-menu */

#hamburger-nav{
    display: none;
}
.hamburger-menu{
    position: relative;
    display: inline-block;

}

.hamburger-icon{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 24px;
    width: 30px;
    cursor:pointer
}
.hamburger-icon span{
    width:100%;
    height:2px;
    background-color: rgb(17, 57, 0);
    transition:all 0.3 ease-in-out;
}
.menu-link{
    position: absolute;
    top:100%;
    right:0%;
    background-color: rgb(246,241,227);
    width:fit-content;
    max-height: 0;
    overflow: hidden;
    transition: all 0.3 ease-in-out;
}
.menu-link a {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 1.5rem;
    color: rgb(17, 57, 0);
    text-decoration: none;
    transition: all 0.3 ease-in-out;
}

.menu-link li{
    list-style: none;
}
.menu-link.open{
    max-height: 300px;
}
.hamburger-icon.open span:first-child{
    transform:rotate(45deg) translate(10px,5px);
}
.hamburger-icon.open span:nth-child(2){
    opacity: 0;
}
.hamburger-icon.open span:last-child{
    transform:rotate(-45deg) translate(10px,-5px);
}
.hamburger-icon span:first-child{
    transform: none;
}
.hamburger-icon span:first-child{
    opacity: 1;
}
.hamburger-icon span:first-child{
    transform: none;
}
/* sections */
section{
        box-sizing: border-box;
        min-height: fit-content;
        height: 85vh;
}

.section-container{
    display:flex;

}

/* profile SECTION */

#profile{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5rem; 
}

.section__pic-container{
    display: flex;
    height: 600px;
    width: 600px;
    margin: auto 0;
}

.section__text {
    align-self: center;
    text-align: center;
}
  
.section__text p {
    font-weight: 600;
}
  
.section__text__p1 {
    text-align: center;
    font-size: 1.5rem;
}
  
.section__text__p2 {
    font-size: 1.75rem;
    margin-bottom: 1rem;
}
.title {
    font-size: 2.25rem;
    text-align: center;
}

#socials-container{
   display: flex;
   justify-content: center;
   margin-top: 1rem;
   gap: 1rem; 
}

/* ICON */
.icon {
    cursor:pointer;
    height: 3rem;
}

/* BUTTON */
.btn-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
    
}
.btn {
    font-weight: 800;
    transition: all 300ms ease;
    padding:1rem;
    width: 8rem;
    border-radius: 2rem;
}

.btn-color-1,.btn-color-2{
    border: rgb(53, 53, 53) 0.1rem solid; 
}
.btn-color-1:hover,.btn-color-2:hover{
    cursor: pointer; 
}
.btn-color-1,.btn-color-2:hover{
    background:rgb(17, 57, 0);
    color:#fcbd59;
}

.btn-color-1:hover{
    background:#fcbd59;
    color: rgb(17, 57, 0);
    transform: translateY(-5px);
}
.btn-color-2{
    background: none;
}
.btn-color-2:hover{
    border: rgb(255, 255, 255) 0.1rem solid; 
    transform: translateY(-5px);
}
.btn-container{
    gap: 1rem;
}
/* About section */
#about
{
    position: relative;
    padding-top: 3rem;
  }

.about-containers {
    gap: 2rem;
    margin-bottom: 2rem;
    margin-top: 2rem;
}
  
.about-details-container {
    justify-content: center;
    flex-direction: column;
}
  
.about-containers,
.about-details-container {
    display: flex;
}
  
.arrow {
    position: absolute;
    right: 0rem;
    bottom: 15px;
    padding-right: 1rem;
}
  
.details-container {
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    text-align: center;
}

/* Experience Section */
#experience {
    position: relative;
    margin-top: 8rem;
    padding-top:8rem;
  }
  
  .experience-sub-title {
    color: rgb(85, 85, 85);
    font-weight: 600;
    font-size: 1.75rem;
    margin-bottom: 2rem;
  }
  
  .experience-details-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-left: 2rem;
    margin-right: 2rem;
  }
  
  .article-container {
    display: flex;
    text-align: initial;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 2.5rem;
    justify-content: space-around;
  }
  
  article {
    display: flex;
    width: 11rem;
    justify-content: space-around;
    gap: 0.5rem;
  }
  
  article .icon {
    cursor: default;
  }

  /* PROJECTS SECTION */

#projects {
    position: relative;
    padding-top: 3rem;
    margin-top: 5rem;
  }
  
  .color-container {
    border-color: rgb(163, 163, 163);
    background: rgb(17, 57, 0);
  }
  
  .project-img {
    border-radius: 2rem;
    width: 90%;
    height: 90%;
  }
  
  .numberofproject {
    margin-top: 1rem;
    color:#fcbd59;
  }
  
  .app-bios{
    color:whitesmoke;
    font-size: 1rem;
  }
  .icon_arrow1{
    position: absolute;
    right: 0rem;
    padding-right: 1rem;
    height: 3rem;
  }

  /* contact section */
  #contact {
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 70vh;
    margin-top: 25rem;
  }
  
  .contact-info-upper-container {
    display: flex;
    justify-content: center;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    background: (250, 250, 250);
    margin: 2rem auto;
    padding: 0.5rem;
  }
  
  .contact-info-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    margin: 1rem;
  }
  
  .contact-info-container p {
    font-size: larger;
  }
  
  .contact-icon {
    cursor: default;
  }
  
  .email-icon {
    height: 3.5rem;
  }
  
  /* FOOTER SECTION */
  
  footer {
    height: 26vh;
    margin: 0 1rem;
  }
  
  footer p {
    text-align: center;
  }
  

